# structype

./: Cargo.toml  Readme.md
src/: lib.rs
